--- a/book.toml
+++ b/book.toml
@@ -12,10 +12,34 @@ edition = "2021"
 [build]
 # build-dir = "cs_learn"
 create-missing = false
-use-default-preprocessors = false
+use-default-preprocessors = true
 
-# [preprocessor.theme]
-# pagetoc        = true
+
+
+
+[preprocessor.theme]
+pagetoc = true
+sidebar-width = "250px"
+
+[output.html]
+default-theme = "rust"
+additional-css = ["theme/pagetoc.css"]
+additional-js = ["theme/pagetoc.js"]
+
+[output.html.fold]
+enable = true
+level = 1
+
+[output.html.playground]
+editable = true
+
+[output.html.print]
+enable = false
+
+[output.theme-ace]
+theme-white = "xcode"
+theme-dark = "monokai"     # displays a run button for rust code
+
 
 [output.html.search]
 enable = true   
@@ -33,68 +57,6 @@ curly-quotes = false
 cname = "jiewyjson.github.io"
 # cname = "cslearn.wyjson.xyz"
 input-404 = "not-found.md"
-
-
-
-[output.html]
-mathjax-support = true
-# theme = "theme"
-[output.html.playground]
-editable        = true
-additional-css = ["theme/pagetoc.css"]
-additional-js  = ["theme/pagetoc.js"]
-
-# [output.theme-ace]
-# theme-white     = "dawn"
-# theme-dark      = "tomorrow_night"
-# below-build-dir = true
-
-# [preprocessor.theme]
-# pagetoc = true
-
-# some variables related (defined in theme/css/variables.css)
-# `content-max-width` + `pagetoc-width` = 95% seems the best
-pagetoc-width = "13%"
-content-max-width = "82%"
-pagetoc-fontsize = "14.5px"
-sidebar-width = "300px"
-menu-bar-height = "40px"   # memu-bar = the bar on the top
-page-padding = "15px"
-mobile-content-max-width = "98%"
-
-# layout
-content-padding = "0 10px"
-content-main-margin-left = "2%"
-content-main-margin-right = "2%"
-nav-chapters-max-width = "auto"
-nav-chapters-min-width = "auto"
-chapter-line-height = "2em"
-section-line-height = "1.5em"
-
-# modify some fontsizes
-root-font-size = "70%"    # control the main font-size
-body-font-size = "1.5rem"
-code-font-size = "0.9em"
-sidebar-font-size = "1em"    # sidebar = toc on the left
-
-# modify some colors under ayu/coal/light/navy/rust theme
-coal-inline-code-color = "#ffb454"
-light-inline-code-color = "#F42C4C"
-navy-inline-code-color = "#ffb454"
-rust-inline-code-color = "#F42C4C"
-light-links = "#1f1fff"
-rust-links = "#1f1fff"
-
-# if true, never read and touch the files in theme dir
-turn-off = false
-
-
-# [output.html.playground]
-# editable = false         # allows editing the source code
-# copyable = true          # include the copy button for copying code snippets
-# copy-js = true           # includes the JavaScript for the code editor
-# line-numbers = false     # displays line numbers for editable code
-# runnable = true          # displays a run button for rust code
 
 
 
