--- a/book.toml
+++ b/book.toml
@@ -39,7 +39,7 @@ enable = false
 [output.theme-ace]
 theme-white = "xcode"
 theme-dark = "monokai"     # displays a run button for rust code
-
+optional = true
 
 [output.html.search]
 enable = true   
